// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image with margin 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin: 8px;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin: 32px;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin: 5%;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-top: 8px;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-top: 32px;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-top: 5%;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-left: 8px;
}

.c7 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-left: 32px;
}

.c8 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-left: 5%;
}

.c9 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-bottom: 8px;
}

.c10 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-bottom: 32px;
}

.c11 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-bottom: 5%;
}

.c12 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-right: 8px;
}

.c13 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-right: 32px;
}

.c14 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  margin-right: 5%;
}

<div>
  <img
    alt=""
    className="c0"
    src=""
  />
  <img
    alt=""
    className="c1"
    src=""
  />
  <img
    alt=""
    className="c2"
    src=""
  />
  <img
    alt=""
    className="c3"
    src=""
  />
  <img
    alt=""
    className="c4"
    src=""
  />
  <img
    alt=""
    className="c5"
    src=""
  />
  <img
    alt=""
    className="c6"
    src=""
  />
  <img
    alt=""
    className="c7"
    src=""
  />
  <img
    alt=""
    className="c8"
    src=""
  />
  <img
    alt=""
    className="c9"
    src=""
  />
  <img
    alt=""
    className="c10"
    src=""
  />
  <img
    alt=""
    className="c11"
    src=""
  />
  <img
    alt=""
    className="c12"
    src=""
  />
  <img
    alt=""
    className="c13"
    src=""
  />
  <img
    alt=""
    className="c14"
    src=""
  />
</div>
`;

exports[`Image with padding 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding: 8px;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding: 32px;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding: 5%;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-top: 8px;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-top: 5%;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-left: 8px;
}

.c7 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-left: 32px;
}

.c8 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-left: 5%;
}

.c9 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-bottom: 8px;
}

.c10 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-bottom: 32px;
}

.c11 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-bottom: 5%;
}

.c12 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-right: 8px;
}

.c13 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-right: 32px;
}

.c14 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  padding-right: 5%;
}

<div>
  <img
    alt=""
    className="c0"
    src=""
  />
  <img
    alt=""
    className="c1"
    src=""
  />
  <img
    alt=""
    className="c2"
    src=""
  />
  <img
    alt=""
    className="c3"
    src=""
  />
  <img
    alt=""
    className="c4"
    src=""
  />
  <img
    alt=""
    className="c5"
    src=""
  />
  <img
    alt=""
    className="c6"
    src=""
  />
  <img
    alt=""
    className="c7"
    src=""
  />
  <img
    alt=""
    className="c8"
    src=""
  />
  <img
    alt=""
    className="c9"
    src=""
  />
  <img
    alt=""
    className="c10"
    src=""
  />
  <img
    alt=""
    className="c11"
    src=""
  />
  <img
    alt=""
    className="c12"
    src=""
  />
  <img
    alt=""
    className="c13"
    src=""
  />
  <img
    alt=""
    className="c14"
    src=""
  />
</div>
`;

exports[`Image with size 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  width: 32px;
  height: 32px;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  width: 64px;
  height: 64px;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  width: 5%;
  height: 5%;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  width: 32px;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  width: 64px;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  width: 5%;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  height: 32px;
}

.c7 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  height: 64px;
}

.c8 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  height: 5%;
}

.c9 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  min-width: 1px;
}

.c10 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  min-width: 64px;
}

.c11 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  min-width: 5%;
}

.c12 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  min-height: 1px;
}

.c13 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  min-height: 64px;
}

.c14 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  min-height: 5%;
}

.c15 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  max-width: 1px;
}

.c16 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  max-width: 32px;
}

.c17 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  max-width: 5%;
}

.c18 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  max-height: 1px;
}

.c19 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  max-height: 32px;
}

.c20 {
  box-sizing: border-box;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  overflow: hidden;
  display: block;
  max-height: 5%;
}

<div>
  <img
    alt=""
    className="c0"
    size="sm"
    src=""
  />
  <img
    alt=""
    className="c1"
    size={64}
    src=""
  />
  <img
    alt=""
    className="c2"
    size="5%"
    src=""
  />
  <img
    alt=""
    className="c3"
    src=""
    width="sm"
  />
  <img
    alt=""
    className="c4"
    src=""
    width={64}
  />
  <img
    alt=""
    className="c5"
    src=""
    width="5%"
  />
  <img
    alt=""
    className="c6"
    height="sm"
    src=""
  />
  <img
    alt=""
    className="c7"
    height={64}
    src=""
  />
  <img
    alt=""
    className="c8"
    height="5%"
    src=""
  />
  <img
    alt=""
    className="c9"
    src=""
  />
  <img
    alt=""
    className="c10"
    src=""
  />
  <img
    alt=""
    className="c11"
    src=""
  />
  <img
    alt=""
    className="c12"
    src=""
  />
  <img
    alt=""
    className="c13"
    src=""
  />
  <img
    alt=""
    className="c14"
    src=""
  />
  <img
    alt=""
    className="c15"
    src=""
  />
  <img
    alt=""
    className="c16"
    src=""
  />
  <img
    alt=""
    className="c17"
    src=""
  />
  <img
    alt=""
    className="c18"
    src=""
  />
  <img
    alt=""
    className="c19"
    src=""
  />
  <img
    alt=""
    className="c20"
    src=""
  />
</div>
`;
